installr 0.16.1 (2015-09-10)
---------------------------

UPDATED FUNCTIONS:
   * updateR - added a new setInternet2 parameter.
   
OTHER NOTES:
   * Updated troubleshooting in the README.
   * rename use_GUI to GUI.

installr 0.16.0 (2015-06-11)
---------------------------

UPDATED FUNCTIONS:
   * R_version_in_a_folder - now returns NULL if no folder was found.
   * updateR - notices when no sub-R-folder was found - and tells the user what to do (instead of stopping the function - solves issue #27 )
   
BUG FIXES:
   * moving "utils" to depends allows add.installr.GUI to work again.
   * install.notepadpp - works again
   

installr 0.15.17 (2015-06-03)
---------------------------

OTHER NOTES:
   * Added (MORE) :: calls to Fix:  "no visible global function definition for"


installr 0.15.16 (2015-06-02)
---------------------------

UPDATED FUNCTIONS:
   * checkMD5sums2 - now uses warning instead of cat (to help user understand this is a warning and not an error)
   * install.R - now omits the files  ‘bin/R.exe’, ‘bin/Rscript.exe’  from MD5 checksum (since they seem to fail for R 3.2.0 :\ )
   * updateR - reminds the user to stop if running it from RStudio.

OTHER NOTES:
   * Added :: calls to Fix:  "no visible global function definition for"

installr 0.15.15 (2015-03-13)
---------------------------

UPDATED FUNCTIONS:
   * install.ImageMagick - fix (thanks to Fernando and Jazzy)


installr 0.15.14 (2015-02-04)
---------------------------
OTHER NOTES:
   * minor fixes.
   * Added Berry Boessenkool as ctr.


installr 0.15.13 (2014-12-10)
---------------------------

NEW FUNCTIONS:
   * xlsx2csv - turning xlsx to csv using VB.


installr 0.15.12 (2014-11-21)
---------------------------

OTHER NOTES:
   * Changed suppressMessages(require(installr)) to suppressMessages(library(installr))
   * Added a few notes on troubleshooting.


installr 0.15.11 (2014-08-20)
---------------------------

UPDATED FUNCTIONS:
   * updateR - now has updater as an alias.

