@@ -2,7 +2,13 @@ installr 0.16.1 (2015-09-10)
 ---------------------------
 
 UPDATED FUNCTIONS:
-   * updateR - added a new setInternet2 parameter.
+   * updateR - new parameters added:
+      *  setInternet2 - so people would not have the error: "Error in file(con, "r") : cannot open the connection"
+      *  fast - overrides other parameters, so to make the installation as fast as possible for the user: no news, installr R, copy packages and Rprofile, keep
+old packages, updated packages, without quiting current R or starting the new R.
+don't use GUI, check MD5sums, keep installed file in the getwd.
+      * The default parameters in "fast" are set to make it easier to update R (on Windows) for people who are blind. (thanks to Jonathan Godfrey)
+      
    
 OTHER NOTES:
    * Updated troubleshooting in the README.
